# chem-copilot

./: .gitignore  README.md  pyproject.toml
examples/: demo_agent.py  generate_inputs.py  parse_outputs.py
src/chem_copilot/: __init__.py  models.py
src/chem_copilot/agent/: __init__.py  graph.py  prompt.py
src/chem_copilot/api/: __init__.py  app.py
src/chem_copilot/generators/: __init__.py  fhi_aims.py  psi4.py
src/chem_copilot/llm/: __init__.py  config.py
src/chem_copilot/parsers/: __init__.py  output_parser.py
src/chem_copilot/slurm/: __init__.py  manager.py
src/chem_copilot/tools/: __init__.py  generate_fhiaims.py  generate_psi4.py  parse_output.py  slurm_tools.py
tests/: conftest.py  test_agent.py  test_agent_integration.py  test_fhi_aims.py  test_models.py  test_output_parser.py  test_parser_integration.py  test_psi4.py  test_slurm.py  test_tools.py
