[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-copilot"
version = "0.1.0"
description = "Agentic AI copilot for computational chemistry workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alastair Price"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ase>=3.22",
    "cclib>=1.8",
    "numpy>=1.24",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langgraph-prebuilt>=0.1",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
claude = [
    "langchain-anthropic>=0.3",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
